--- a/Proje/app/src/main/res/layout/activity_chat.xml
+++ b/Proje/app/src/main/res/layout/activity_chat.xml
@@ -53,24 +53,20 @@
         android:orientation="horizontal"
         android:id="@+id/linearLayout7">
 
-        <Button
-            android:id="@+id/chatgonderbutton"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:text="Gönder" />
     </LinearLayout>
 
     <EditText
         android:id="@+id/chatkullanicitext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/linearLayout7"
-        android:layout_toRightOf="@+id/linearLayout7"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:layout_alignBottom="@+id/chatgonderbutton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/linearLayout7"
+        android:layout_toLeftOf="@+id/chatgonderbutton"
+        android:layout_toStartOf="@+id/chatgonderbutton" />
 
     <ImageButton
         android:id="@+id/chatbackbutton"
@@ -80,5 +76,15 @@
         android:layout_toEndOf="@+id/chatkanalimage"
         android:layout_toRightOf="@+id/chatkanalimage"
         android:src="@drawable/ic_left_arrow" />
+
+    <Button
+        android:id="@+id/chatgonderbutton"
+        android:drawableTop="@drawable/ic_send_button"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/chatplaybutton"
+        android:layout_toRightOf="@+id/chatplaybutton"
+        android:text="Gönder" />
 
 </RelativeLayout>
