favori layout has added.

--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -71,6 +71,6 @@
         android:layout_marginTop="77dp"
         android:layout_toEndOf="@+id/timePicker"
         android:layout_toRightOf="@+id/timePicker"
-        android:text="Start" />
+        android:text="@string/Start" />
 
 </RelativeLayout>
