--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
             android:layout_height="wrap_content"
             android:text="@string/Kanallar" />
 
+
         <Button
             android:id="@+id/mainkategorilerbutton"
             style="@android:style/Widget.Holo.ImageButton"
@@ -45,6 +46,7 @@
 
 
     <ListView
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listView"
@@ -86,4 +88,15 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/b_channelOn"
+        android:layout_width="100dp"
+        android:layout_height="70dp"
+        android:layout_above="@+id/mLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="49dp"
+        android:layout_marginStart="49dp"
+        android:background="@android:color/darker_gray"
+        android:text="Play" />
 </RelativeLayout>
