--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/mLayout"
-        android:layout_above="@+id/linearLayout3"></ListView>
+        android:layout_above="@+id/linearLayout3">
+
+    </ListView>
 
 
     <LinearLayout
@@ -88,15 +90,4 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/b_channelOn"
-        android:layout_width="100dp"
-        android:layout_height="70dp"
-        android:layout_above="@+id/mLayout"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="49dp"
-        android:layout_marginStart="49dp"
-        android:background="@android:color/darker_gray"
-        android:text="Play" />
 </RelativeLayout>
